--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Greeting
-        run: echo "Hello World"
+        run:  |
+              echo "Hello World"
+              echo "this is multi -line command"
       - name: Print GoodBye
         run: echo "Done -bye"
