--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
           pwd
           ls -l
           cd frontend/
+          pwd
+          ls -l
       - name: Install dependencies
         run: npm ci
       - name: Run Tests
