--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
           pwd
           ls -l
       - name: Install dependencies
+        working-directory: frontend/
         run: npm ci
       - name: Run Tests
+        working-directory: frontend/
         run: npm test
