--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,12 +14,11 @@ jobs:
         run: |
           pwd
           ls -l
-          cd frontend/
-          pwd
-          ls -l
       - name: Install dependencies
-        working-directory: frontend/
-        run: npm ci
+        run: |
+          cd frontend/
+          npm ci
       - name: Run Tests
-        working-directory: frontend/
-        run: npm test
+        run: |
+          cd frontend/
+          npm test
