--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,23 @@ jobs:
         run: |
           cd frontend/
           npm test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4
+      - name: Install Nodejs
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+      - name: Install dependencies
+        run: |
+          cd frontend/
+          npm ci
+      - name: Build the Project
+        run: |
+          cd frontend/
+          npm run build
+          ls -l
+      - name: Deploy
+        run: echo "Deploying..."
