added needs attr in deploy job

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
           cd frontend/
           npm test
   deploy:
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - name: Get code
