--- a/.github/workflows/expandobj.yml
+++ b/.github/workflows/expandobj.yml
@@ -1,8 +1,8 @@
 name: Expressions and Context Objs
 on: workflow_dispatch
 jobs:
-  test:
+  info:
     runs-on: ubuntu-latest
     steps:
       - name: Expressions
-        run: ${{toJSON(github)}}
+        run: echo "${{ toJSON(github) }}"
